# Programa-automacao

./: .gitignore  BANCOCNPJ.xlsx  GUIA NOME.xlsx  README.md  app.py  config.txt  erro_log.txt  janela1.json  program_log.txt  pyproject.toml  requirements.txt  setup.py  testes.py
controllers/: config_controller.py  main_controller.py  sec_controller.py  ter_controller.py
controllers/abas_main/: aba_dimob.py  aba_notas_fat.py  aba_prn.py  aba_razao.py
core/: CNPJ_API.py  DIMOB.py  FATURAMENTO.py  NOTAS.py  NOTAS_pdf.py  NOTAS_tomados.py  PRN_T.py  RAZAO_DFC.py  RAZAO_resumo.py
funcoes/: FATURAMENTO.py  NOTAS.py  NOTAS_entrada.py  NOTAS_pdf.py  NOTAS_tomados.py  transformarPRN2.py
interface/: mainW.ui  secW.ui
models/: banco_cnpj.py  banco_fat.py
resources/config/: caminhos.py  config.txt  janela1.json  janela2.json  janela3.json
resources/data/: BANCOCNPJ.xlsx  GUIA NOME.xlsx
resources/layouts/: configW.py  mainW.py  secW.py  tercW.py
resources/layouts/UI/: configW.ui  mainW.ui  tercW.ui
resources/styles/: dark.css  light.css
static/: dark.css  light.css
