[project]
name = "programa-automacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "cx-freeze==7.2.2",
    "cx-logging==3.2.0",
    "distro==1.9.0",
    "et-xmlfile==1.1.0",
    "idna==3.10",
    "jpype1==1.5.2",
    "lief==0.15.1",
    "numpy==2.1.1",
    "openpyxl>=3.1.5",
    "packaging==24.1",
    "pandas==2.2.3",
    "pypdf2==3.0.1",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.15.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "requests==2.32.3",
    "setuptools==75.1.0",
    "six==1.16.0",
    "tabula-py==2.10.0",
    "tzdata==2024.1",
    "unidecode==1.3.8",
    "urllib3==2.2.3",
]
